[package]
name = "todo"
version = "0.1.0"
authors = ["4afS <4afS.h1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
chrono = "0.4.19"
uuid = "0.8.1"

[[bin]]
doc = false
name = "todo"
