[package]
name = "todo"
version = "0.1.0"
authors = ["4afS <4afS.h1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
chrono = "0.4.19"
uuid = {version = "0.8.1", features = ["v4"]}
derive_more = "0.99.11"
serde = "1.0.118"
serde_json = "1.0.60"
env_logger = "0.8.2"

[[bin]]
doc = false
name = "todo"
